tests/errors/missing_val_56/e6.src
.IPPcode21


CALL lbl


LABEL lbl
RETURN
